--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     },
     "dependencies": {
         "echarts": "^4.2.1",
+        "echarts-wordcloud": "^1.1.3",
         "eslint-config-standard": "^13.0.1",
         "eslint-plugin-html": "^5.0.5",
         "eslint-plugin-node": "^9.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.0",
         "postcss-cssnext": "^3.1.0",
         "postcss-nested": "^4.1.2",
         "showdown": "^1.9.0",
