--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -19,6 +19,7 @@
         "indent_with_tabs": false,
         "preserve_newlines": true,
         "max_preserve_newlines": 4,
-        "jslint_happy": true
+        "jslint_happy": true,
+        "end_with_newline": true
     }
 }
