--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "build": "node build/build.js"
     },
     "dependencies": {
+        "ant-design-vue": "^1.3.14",
         "echarts": "^4.2.1",
         "echarts-wordcloud": "^1.1.3",
         "eslint-config-standard": "^13.0.1",
