--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "eslint-plugin-node": "^9.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.0",
+        "less": "^3.9.0",
+        "less-loader": "^5.0.0",
         "postcss-cssnext": "^3.1.0",
         "postcss-nested": "^4.1.2",
         "showdown": "^1.9.0",
