--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
         "build": "node build/build.js"
     },
     "dependencies": {
+        "@ant-design/colors": "^3.1.0",
         "ant-design-vue": "^1.3.14",
+        "antd": "^3.22.0",
+        "css-color-function": "^1.3.3",
+        "css-vars": "^2.2.0",
         "echarts": "^4.2.1",
         "echarts-wordcloud": "^1.1.3",
         "eslint-config-standard": "^13.0.1",
@@ -19,10 +23,12 @@
         "eslint-plugin-node": "^9.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.0",
-        "less": "^3.9.0",
+        "scss": "^3.9.0",
         "less-loader": "^5.0.0",
+        "node-sass": "^4.12.0",
         "postcss-cssnext": "^3.1.0",
         "postcss-nested": "^4.1.2",
+        "sass-loader": "^7.3.1",
         "showdown": "^1.9.0",
         "vue": "^2.5.2",
         "vue-echarts": "^4.0.3"
