--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "eslint-plugin-node": "^9.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.0",
+        "html2canvas": "^1.0.0-rc.3",
+        "jspdf": "^1.5.3",
         "less-loader": "^5.0.0",
         "node-sass": "^4.12.0",
         "postcss-cssnext": "^3.1.0",
