:art: add custom theme button

--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
         "html2canvas": "^1.0.0-rc.3",
         "jspdf": "^1.5.3",
         "less-loader": "^5.0.0",
+        "lodash": "^4.17.15",
         "node-sass": "^4.12.0",
         "postcss-cssnext": "^3.1.0",
         "postcss-nested": "^4.1.2",
         "sass-loader": "^7.3.1",
         "showdown": "^1.9.0",
         "vue": "^2.5.2",
+        "vue-color": "^2.7.0",
         "vue-echarts": "^4.0.3",
         "vuex": "^3.1.1"
     },
