--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@ant-design/colors": "^3.1.0",
         "ant-design-vue": "^1.3.14",
         "antd": "^3.22.0",
+        "babel-plugin-import": "^1.12.1",
+        "compression-webpack-plugin": "1.1.11",
         "css-color-function": "^1.3.3",
         "css-vars": "^2.2.0",
         "echarts": "^4.2.1",
@@ -83,7 +85,7 @@
         "vue-style-loader": "^3.0.1",
         "vue-template-compiler": "^2.5.2",
         "webpack": "^3.6.0",
-        "webpack-bundle-analyzer": "^2.9.0",
+        "webpack-bundle-analyzer": "^3.4.1",
         "webpack-dev-server": "^2.9.1",
         "webpack-merge": "^4.1.0"
     },
