--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
         "start": "npm run dev",
         "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-        "build": "node build/build.js"
+        "build": "node build/build.js",
+        "test": "jest"
     },
     "dependencies": {
         "@ant-design/colors": "^3.1.0",
@@ -26,6 +27,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.0",
         "html2canvas": "^1.0.0-rc.3",
+        "jsdom": "^15.1.1",
         "jspdf": "^1.5.3",
         "less-loader": "^5.0.0",
         "lodash": "^4.17.15",
@@ -37,13 +39,16 @@
         "vue": "^2.5.2",
         "vue-color": "^2.7.0",
         "vue-echarts": "^4.0.3",
+        "vue-jest": "^3.0.5",
         "vuex": "^3.1.1"
     },
     "devDependencies": {
+        "@vue/test-utils": "^1.0.0-beta.13",
         "autoprefixer": "^7.1.2",
         "babel-core": "^6.22.1",
         "babel-eslint": "^8.2.1",
         "babel-helper-vue-jsx-merge-props": "^2.0.3",
+        "babel-jest": "^21.2.0",
         "babel-loader": "^7.1.1",
         "babel-plugin-istanbul": "^4.1.1",
         "babel-plugin-syntax-jsx": "^6.18.0",
@@ -69,6 +74,8 @@
         "friendly-errors-webpack-plugin": "^1.6.1",
         "html-webpack-plugin": "^2.30.1",
         "inject-loader": "^3.0.0",
+        "jest": "^21.2.1",
+        "jest-canvas-mock": "^2.1.1",
         "node-notifier": "^5.1.2",
         "optimize-css-assets-webpack-plugin": "^3.2.0",
         "ora": "^1.2.0",
@@ -76,6 +83,7 @@
         "postcss-import": "^11.0.0",
         "postcss-loader": "^2.0.8",
         "postcss-url": "^7.2.1",
+        "regenerator-runtime": "^0.11.0",
         "rimraf": "^2.6.0",
         "semver": "^5.3.0",
         "shelljs": "^0.7.6",
@@ -86,12 +94,46 @@
         "vue-template-compiler": "^2.5.2",
         "webpack": "^3.6.0",
         "webpack-bundle-analyzer": "^3.4.1",
-        "webpack-dev-server": "^3.1.11",
+        "webpack-dev-server": "2.9.1",
         "webpack-merge": "^4.1.0"
     },
     "engines": {
         "node": ">= 6.0.0",
         "npm": ">= 3.0.0"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "vue"
+        ],
+        "moduleNameMapper": {
+            "^src/(.*)$": "<rootDir>/src/$1",
+            "^components/(.*)$": "<rootDir>/src/components/$1",
+            "^util/(.*)$": "<rootDir>/src/util/$1",
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+            "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+        },
+        "setupFiles": [
+            "jest-canvas-mock",
+            "./__mocks__/client.js"
+        ],
+        "transform": {
+            ".*\\.(vue)$": "vue-jest",
+            "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
+        },
+        "collectCoverage": false,
+        "collectCoverageFrom": [
+            "**/*.{js,vue}",
+            "!**/node_modules/**"
+        ],
+        "coveragePathIgnorePatterns": [
+            "coverage"
+        ],
+        "coverageReporters": [
+            "html",
+            "text-summary"
+        ]
     },
     "browserslist": [
         "> 1%",
