--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -1,9 +1,9 @@
-name: 'Deploy to GitHub Pages'
-description: 'This action will handle the building and deploying process of your project to GitHub Pages.'
+name: 'github deploy action'
+description: 'This action will auto build then deploy to target branch when it get triggered'
 author: 'jeoy <jeoy_z@126.com>'
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+    using: 'docker'
+    image: 'Dockerfile'
 branding:
-  icon: 'git-commit'
-  color: 'orange'
+    icon: 'package'
+    color: 'blue'
