--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,43 +1,24 @@
-name: Node CI
+name: unit-test
 
 on: [push]
 
 jobs:
-    # build:
-
-    #   runs-on: ubuntu-latest
-
-    #   strategy:
-    #     matrix:
-    #       node-version: [8.x, 10.x, 12.x]
-
-    #   steps:
-    #   - uses: actions/checkout@v1
-    #   - name: Use Node.js ${{ matrix.node-version }}
-    #     uses: actions/setup-node@v1
-    #     with:
-    #       node-version: ${{ matrix.node-version }}
-    #   - name: npm install, build, and test
-    #     run: |
-    #       npm install
-    #       npm run build --if-present
-    #       npm test
-    #     env:
-    #       CI: true
-
-    build-and-deploy:
+    build:
         runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@master
 
-            - name: Build and Deploy
-              uses: ./.github/actions/deploy
+        strategy:
+            matrix:
+                node-version: [8.x, 10.x, 12.x]
+
+        steps:
+            - uses: actions/checkout@v1
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - name: npm install, build, and test
+              run: |
+                  npm install
+                  npm test
               env:
-                  COMMIT_EMAIL: jeoy_z@126.com
-                  COMMIT_NAME: jeoy
-                  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-                  BASE_BRANCH: master # The branch the action should deploy from.
-                  DEPLOY_BRANCH: gh-pages # The branch the action should deploy to.
-                  FOLDER: dist # The folder the action should deploy.
-                  BUILD_SCRIPT: yarn && npm run-script build # The build script the action should run prior to deploying.
+                  CI: true
